examples/bad/names7.alef
(* Examples of the importance of effect variable names. *)

g : unit -> unit<Op1 | mu3>
g = fun u -> Op1();;


ign : (unit -> unit<mu1>) -> unit<mu2>
ign = fun f -> val ();;

appl : (unit -> unit<mu1>) -> unit<mu1>
appl = fun f -> f();;


ho : ((unit -> unit<mu23>) -> unit<mu23>) -> unit<Op1 | mu23> 
ho = fun h -> let x = h g in val ();;  

idh : unit<Op1 | mu41> ->> unit<Op1 | mu41>
idh = handler
        val x -> val x,
        {Op1 u k -> Op1()};;

rmOp : unit<Op1 | mu51> ->> unit<mu51>
rmOp = handler 
        val x -> val x,
        {Op1 u k -> k ()};;

fh : (unit<Op1|mu31> ->> unit<mu31>) -> unit<mu31>
fh = fun h -> with h handle Op1();;

hf : (unit -> unit<mu61>) -> (unit<mu61> ->> unit<mu61>)<mu62>
hf = fun f -> val (handler 
                    val x -> f(),{} : unit<mu61> ->> unit<mu61>);;

main : unit<mu5>
main = ho appl 